# DTaaSWorkspace

./: .gitignore  .pylintrc  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  KEYCLOAK_MIGRATION.md  KEYCLOAK_QUICKREF.md  KEYCLOAK_SETUP.md  OLD_CONF.md  PENDING_ISSUES.md  POTENTIAL_IMPROVEMENTS.md  PR_CUSTOM_CLAIMS.md  PR_OATHKEEPER.md  PUBLISHING.md  README.md  TRAEFIK_TLS.md
.github/: copilot-instructions.md
.github/actions/check-connectivity/: action.yml
.github/actions/check-service-health/: action.yml
.github/actions/test-composition/: action.yml
.github/workflows/: docker-lint-build.yml  docker-lint.yml  keycloak-python-tests.yml  lint-scripts.yml  test-compositions.yml  traefik-secure-test.yml  traefik-test.yml  workspace-admin.yml  workspace-publish.yml
scripts/: setup_keycloak.sh
scripts/keycloak/: CONFIGURE_KEYCLOAK.md  configure_keycloak_mappers.sh  configure_keycloak_rest.sh  configure_keycloak_windows.ps1
scripts/keycloak/test/: RUN_KEYCLOAK_CONFIGURATION_TESTS.md  test_keycloak_scripts.ps1
workspaces/: DEVELOPER.md  Dockerfile.ubuntu.noble.gnome  Dockerfile.ubuntu.noble.xfce
workspaces/src/admin/: DOCUMENTATION.md  README.md  pyproject.toml
workspaces/src/admin/src/admin/: main.py  services_template.json
workspaces/src/admin/tests/: test_main.py
workspaces/src/install/: dtaas_cleanup.sh  image_wegovy.sh  kasm_fixes.sh
workspaces/src/startup/: configure_nginx.py  custom_startup.sh  dtaas_shim.sh  nginx.conf
workspaces/test/dtaas/: CLAUDE_REVIEW_OATHKEEPER_RESPONSE.md  CONFIGURATION.md  KEYCLOAK_CUSTOM_CLAIMS.md  (+17 more)
(+53 files in other folders)
